# omni-perception-3se

./: .clang-format  .dockerignore  .gitignore  CMakeLists.txt  CMakePresets.json  Dockerfile  Justfile  README.md  prek.toml  vcpkg.json
.github/workflows/: ci.yml
include/cmake_demo/: logger.hpp
src/: app_config.cpp  app_config.hpp  logger.hpp  main.cpp
src/core/: app_config.cpp  app_config.hpp  blocking_queue.hpp
src/infra/: logger.hpp
src/perception/: angle_utils.cpp  angle_utils.hpp  camera_worker.cpp  camera_worker.hpp  demo_frames.cpp  demo_frames.hpp  detector.hpp  detector_factory.cpp  detector_factory.hpp  fusion_tracker.cpp  fusion_tracker.hpp  json_output.cpp  json_output.hpp  mock_person_detector.cpp  mock_person_detector.hpp  scene_labels.cpp  scene_labels.hpp  state_publisher.cpp  state_publisher.hpp  types.hpp  yolo26_nano_detector.cpp  yolo26_nano_detector.hpp
src/simulation/: simulation_engine.cpp  simulation_engine.hpp
tests/: app_config_test.cpp  pipeline_test.cpp  simulation_test.cpp
